Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriIntegerRetBoolObj.quorum
class Main
    action Main
        integer one = 66
        integer two = 66
        Yoda<integer, integer, Boolean> yoda
        Boolean ret = yoda:useForce(one, two)
        output "passed"
     end
end
