Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriIntegerRetBoolObjFail.quorum
class Main
    action Main
        integer one = 66
        integer two = 66
        Yoda<integer, integer, Boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
